--- a/knn_model_SpecKNN.ipynb
+++ b/knn_model_SpecKNN.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "18d731ee-32a1-4314-9a7e-1e4d72237c6b",
    "metadata": {},
    "source": [
     "# Baseline KNN on spectra"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6ebb31d-603d-42f4-9653-f06ff9c5e030",
    "metadata": {
     "tags": []
    },
@@ -21,7 +19,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9f1a9140-d898-45d0-8b9e-b96903137159",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +33,14 @@
     "max_mz = 1001\n",
     "\n",
     "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%autoreload 2\n",
+    "\n",
+    "import sys; sys.path.append(\"..\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aacf9f2d-91f1-416e-943d-09231a7f3fdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +53,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2f86b69-9a23-42b0-97a5-9df41dd82786",
    "metadata": {},
    "source": [
     "## Data loading"
@@ -64,25 +61,23 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4d8413ed-dc29-4644-b5ca-2bb0e80942f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "from matchms.importing import load_from_msp\n",
-    "from data_utils import spectrum_processing, get_n_samples, FixedSizeDS, TopKDS\n",
-    "from helpers import get_mz_vector, get_his_size, compact_to_mz\n",
+    "from utils.data_utils import spectrum_processing, get_n_samples, FixedSizeDS, TopKDS\n",
+    "from utils.helpers import get_mz_vector, get_his_size, compact_to_mz\n",
     "import numpy as np\n",
     "from scipy.sparse import csr_matrix\n",
     "\n",
     "# only for visual \n",
     "from spec2vec import SpectrumDocument\n",
-    "from data_utils import BasicCoder"
+    "from utils.data_utils import BasicCoder"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b04cd907-6bdb-4a72-8820-239832938260",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +96,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "34bcb99c-a157-4624-b3e1-eb852907be60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +105,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6c93aebe-0df2-4d73-8303-f16acc44cfbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +121,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "05108c26-f697-4142-92bd-b5842363ed6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +132,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c25d3b24-7343-414f-a54b-c06262807ab3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +147,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4720fa83-26ee-4305-981a-357348462b92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +157,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6685015b-c5c4-47e1-8653-2aa0f3717e68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +346,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c75059bd-59e7-426f-a1d8-e5fd8cd0df3c",
    "metadata": {},
    "source": [
     "# Missing low"
@@ -366,7 +354,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1a50c908-fa72-461c-b949-81caf375ed0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,18 +372,16 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "52b594b4-8fab-490c-bffd-758ac212e563",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model_evaluation import calc_predictions, load_predictions, model_selection\n",
-    "from visual_utils import plot_scores"
+    "from utils.model_evaluation import calc_predictions, load_predictions, model_selection\n",
+    "from utils.visual_utils import plot_scores"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30b1443c-6f20-4310-9580-201ddc8c244d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +392,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8e797f28-2f73-42ba-983a-977da2fce6ca",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +457,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3333e1e1-7735-415e-a5d9-c130938b1e9e",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +485,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5744138e-4e6e-4f10-a70c-b07bdf191c97",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +504,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b51824cb-db7c-44be-af02-54a80bd9e998",
    "metadata": {
     "tags": []
    },
@@ -533,7 +514,6 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "2b4a9dc1-99da-4cb6-b405-975705440c55",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +528,7 @@
     }
    ],
    "source": [
-    "from visual_utils import plot_spectrum_predictions\n",
+    "from utils.visual_utils import plot_spectrum_predictions\n",
     "i = 14047\n",
     "k = 5\n",
     "plotDS = TopKDS(documents_test, k=k, vocab={f\"peak@{mz}\": mz for mz in range(0,max_mz)}, onehot=False)\n",
@@ -563,7 +543,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fe92b6e-4ef8-4c67-8dac-f8c6c96a2487",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +563,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bc88727-566f-48dd-ba19-54110838f31d",
    "metadata": {},
    "source": [
     "## Evaluation on the test set"
@@ -593,7 +571,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ea6339d-a5dc-43eb-b468-52cdf3618440",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +585,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2923e6d3-dbed-45e3-8188-07488e4b810d",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +623,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6db71407-b1d6-42d6-a23d-4cd197bb9958",
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +656,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5c1f5da8-d962-44f3-9975-58833f47d636",
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +683,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04275619-6444-4985-994e-a7af0a256634",
    "metadata": {},
    "source": [
     "# Missing random"
@@ -718,7 +691,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0c2bfdb9-6058-4512-9052-3b813abcd3ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,17 +716,15 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "646392aa-fe9f-4063-bc21-62f7e765522c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model_evaluation import calc_predictions_random, load_predictions_random, model_selection_random"
+    "from utils.model_evaluation import calc_predictions_random, load_predictions_random, model_selection_random"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3b85d0ff-f33d-4a91-9a64-481c587213a2",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +770,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f64df0d1-0119-448d-9425-a3cf5a4c9c80",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +818,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0a94c638-7c9c-4fc7-9748-12f4187a03e9",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +846,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "516700de-8535-4c8f-9b0c-244d2105ae8a",
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +865,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a337a15-2ee1-4998-be5c-850c511c77e7",
    "metadata": {},
    "source": [
     "## Visualisation of the best predictor"
@@ -907,11 +873,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "739f50da-6fb9-4895-b99b-2a98da583d49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from visual_utils import plot_spectrum_predictions_random\n",
+    "from utils.visual_utils import plot_spectrum_predictions_random\n",
     "for i in range(len(documents_test)):\n",
     "    if i != 13766:\n",
     "        continue\n",
@@ -935,7 +900,6 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "59c74a1b-a654-42fa-be85-7ef160d19bfc",
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +925,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5bdd519-5484-45df-8c40-f43da2fb39ae",
    "metadata": {},
    "source": [
     "## Evaluation on the test set"
@@ -970,7 +933,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "dc2710f5-cb5d-449f-8cb6-aa2266aa7d62",
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +969,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2c6bac09-6f51-4f58-99e0-8e773a38de00",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +999,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f7433c83-02e4-4bec-8996-d61839e987dd",
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1039,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
