--- a/generative_model_Decoder.ipynb
+++ b/generative_model_Decoder.ipynb
@@ -43,7 +43,9 @@
     "data_realtest_path = f\"{base}/3_RI using kovats of Mass spectra from RAMClustR on data 115.msp\"\n",
     "\n",
     "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%autoreload 2\n",
+    "\n",
+    "import sys; sys.path.append(\"..\")"
    ]
   },
   {
@@ -87,8 +89,8 @@
    "source": [
     "from matchms.importing import load_from_msp\n",
     "from spec2vec import SpectrumDocument\n",
-    "from data_utils import spectrum_processing\n",
-    "from data_utils import IntegerMzCoder, TextMzCoder, TopKDS, GenDS, HuggDS\n",
+    "from utils.data_utils import spectrum_processing\n",
+    "from utils.data_utils import IntegerMzCoder, TextMzCoder, TopKDS, GenDS, HuggDS\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import numpy as np\n",
     "import torch"
@@ -687,7 +689,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from visual_utils import plot_spectrum_predictions\n",
+    "from utils.visual_utils import plot_spectrum_predictions\n",
     "\n",
     "predictor = PredictorDstGPT2.from_file(f\"models/{kind}/gpt2_lr5e-5\", TextMzCoder, max_mz=None)\n",
     "predictor.model.cpu()\n",
@@ -721,7 +723,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from metrics import metrics_klj, metrics_intlj\n",
+    "from utils.metrics import metrics_klj, metrics_intlj\n",
     "\n",
     "predictors = { \n",
     "            \"gpt2_first_dst\": PredictorDstGPT2.from_file(f\"models/{kind}/gpt2\", TextMzCoder, max_mz=None, device=device),\n",
@@ -753,8 +755,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model_evaluation import calc_predictions, load_predictions, model_selection\n",
-    "from visual_utils import plot_scores"
+    "from utils.model_evaluation import calc_predictions, load_predictions, model_selection\n",
+    "from utils.visual_utils import plot_scores"
    ]
   },
   {
@@ -894,8 +896,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from metrics import accuracy_at_k\n",
-    "from visual_utils import plot_stats\n",
+    "from utils.metrics import accuracy_at_k\n",
+    "from utils.visual_utils import plot_stats\n",
     "\n",
     "def get_to_len(xs, len_):\n",
     "    return [xs[i] if i<len(xs) else 0 for i in range(len_)]\n",
@@ -914,7 +916,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from metrics import accuracy_at_int\n",
+    "from utils.metrics import accuracy_at_int\n",
     "\n",
     "accs_at_int = accuracy_at_int(l_pred_indices_per_k_best, y_indices, X_intens)\n",
     "accs_at_int_base = get_to_len(accuracy_at_int(l_pred_indices_per_k_base, y_indices_base, X_intens_base), len(accs_at_int))"
@@ -1173,7 +1175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prediction_utils import enhance_spectra, predict_spectra\n",
+    "from utils.prediction_utils import enhance_spectra, predict_spectra\n",
     "        \n",
     "enhanced_spectra = [*enhance_spectra(spectrums_supertest, preds, 5)]\n",
     "predicted_spectra = [*predict_spectra(spectrums_supertest, preds, 5)]\n"
@@ -1232,7 +1234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
