--- a/generative_model_LSTM.ipynb
+++ b/generative_model_LSTM.ipynb
@@ -32,7 +32,9 @@
     "\n",
     "\n",
     "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%autoreload 2\n",
+    "\n",
+    "import sys; sys.path.append(\"..\")"
    ]
   },
   {
@@ -77,8 +79,8 @@
    "source": [
     "from matchms.importing import load_from_msp\n",
     "from spec2vec import SpectrumDocument\n",
-    "from data_utils import spectrum_processing\n",
-    "from data_utils import IntegerMzCoder, TextMzCoder, TopKDS, GenDS, gen_collate\n",
+    "from utils.data_utils import spectrum_processing\n",
+    "from utils.data_utils import IntegerMzCoder, TextMzCoder, TopKDS, GenDS, gen_collate\n",
     "from torch.utils.data import Dataset, DataLoader"
    ]
   },
@@ -443,7 +445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from visual_utils import plot_training\n",
+    "from utils.visual_utils import plot_training\n",
     "def train(model, train_DS, val_DS, train_loader, val_loader, model_name, lr=1e-3, patience=3, max_epoch=500, \\\n",
     "          init_b=lambda n: \"bias\" in n, init_w=lambda n: \"weight\" in n and \"lstm\" in n, device=\"cpu\"):\n",
     "    \n",
@@ -1041,7 +1043,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from visual_utils import plot_spectrum_predictions\n",
+    "from utils.visual_utils import plot_spectrum_predictions\n",
     "\n",
     "\n",
     "predictor = PredictorDstLSTM.from_file(f\"models/{kind}/plstm\", TextMzCoder, max_mz=None, w2v=w2v)\n",
@@ -1088,7 +1090,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from metrics import metrics_klj, metrics_intlj\n",
+    "from utils.metrics import metrics_klj, metrics_intlj\n",
     "predictors = { \n",
     "                \"plstm_dst\": PredictorDstLSTM.from_file(f\"models/{kind}/plstm\", TextMzCoder, max_mz=None, device=device, w2v=w2v),\n",
     "                # \"plstm_intens_dst\": PredictorDstLSTM.from_file(f\"models/{kind}/plstm_intens\", TextMzCoder, max_mz=None, device=device, w2v=w2v),\n",
@@ -1120,8 +1122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model_evaluation import calc_predictions, load_predictions, model_selection\n",
-    "from visual_utils import plot_scores"
+    "from utils.model_evaluation import calc_predictions, load_predictions, model_selection\n",
+    "from utils.visual_utils import plot_scores"
    ]
   },
   {
@@ -1498,8 +1500,8 @@
     }
    ],
    "source": [
-    "from metrics import accuracy_at_k\n",
-    "from visual_utils import plot_stats\n",
+    "from utils.metrics import accuracy_at_k\n",
+    "from utils.visual_utils import plot_stats\n",
     "\n",
     "def get_to_len(xs, len_):\n",
     "    return [xs[i] if i<len(xs) else 0 for i in range(len_)]\n",
@@ -1527,7 +1529,7 @@
     }
    ],
    "source": [
-    "from metrics import accuracy_at_int\n",
+    "from utils.metrics import accuracy_at_int\n",
     "\n",
     "accs_at_int = accuracy_at_int(l_pred_indices_per_k_best, y_indices, X_intens)\n",
     "accs_at_int_base = get_to_len(accuracy_at_int(l_pred_indices_per_k_base, y_indices_base, X_intens_base), len(accs_at_int))"
@@ -2933,7 +2935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
