--- a/knn_model_Gas2VecKNN.ipynb
+++ b/knn_model_Gas2VecKNN.ipynb
@@ -49,7 +49,9 @@
     "\n",
     "\n",
     "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%autoreload 2\n",
+    "\n",
+    "import sys; sys.path.append(\"..\")"
    ]
   },
   {
@@ -92,8 +94,8 @@
    "source": [
     "from matchms.importing import load_from_msp\n",
     "from spec2vec import SpectrumDocument\n",
-    "from data_utils import spectrum_processing\n",
-    "from data_utils import IntegerMzCoder, TextMzCoder, TopKDS, GenDS"
+    "from utils.data_utils import spectrum_processing\n",
+    "from utils.data_utils import IntegerMzCoder, TextMzCoder, TopKDS, GenDS"
    ]
   },
   {
@@ -142,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from helpers import get_top_k_ind\n",
+    "from utils.helpers import get_top_k_ind\n",
     "from collections import Counter\n",
     "import numpy as np"
    ]
@@ -333,7 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from visual_utils import plot_spectrum_predictions\n",
+    "from utils.visual_utils import plot_spectrum_predictions\n",
     "\n",
     "predictor = PredictorKNN(PeakKNN(w2v), TextMzCoder, max_mz=None)\n",
     "\n",
@@ -388,7 +390,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from metrics import metrics_klj, metrics_intlj\n",
+    "from utils.metrics import metrics_klj, metrics_intlj\n",
     "\n",
     "predictors = {\"g2vknn_peak\": PredictorKNN(PeakKNN(w2v,index2relfreq=None), TextMzCoder, max_mz=None), \n",
     "              \"g2vknn_spec\": PredictorKNN(SpectralKNN(w2v, index2relfreq=None), TextMzCoder, max_mz=None)\n",
@@ -406,8 +408,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model_evaluation import calc_predictions, load_predictions, model_selection\n",
-    "from visual_utils import plot_scores"
+    "from utils.model_evaluation import calc_predictions, load_predictions, model_selection\n",
+    "from utils.visual_utils import plot_scores"
    ]
   },
   {
@@ -686,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
